PostService и рабочие тесты